Fix display of countries on mobile

--- a/components/input/IntlTelInput.scss
+++ b/components/input/IntlTelInput.scss
@@ -9,3 +9,6 @@
 .intl-tel-input .country-list .country.highlight::before {
     background-color: rgba(0, 0, 0, 0.05);
 }
+.intl-tel-input .country-list .country-name {
+    color: #262a33;
+}
